# consent-protocol

./: .cursorrules  .env.cloud.example  .env.dev.local.example  .env.example  .env.local-uatdb.local.example  .env.prod-remote.local.example  .env.prod.local.example  .env.uat-remote.local.example  .env.uat.local.example  .gcloudignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  COMPLIANCE_IMPLEMENTATION_COMPLETE.md  COMPLIANCE_PROGRESS.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OFFLINE_MODE.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES.md  cloudbuild.yaml  code_of_conduct.md  consent_db.py  contributing.md  deploy.ps1  deploy.sh  docker-compose.yml  dump_actor_profiles.py  dump_sec_payloads.py  getting_started.md  hushh.md  (+13 more)
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  (+1 more)
hushh-adk-agents/: .adkignore  .dockerignore  .env.example  Dockerfile  __init__.py  agent.py  inspect_adk_mcp.py  pyproject.toml  run_mesh_locally.py  verify_agent_data.py
hushh-adk-agents/._kushal_profile_data/: .cursorrules  .gitignore
hushh-adk-agents/._kushal_profile_data/Interview-Prep/: README.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/By_Company/Deloitte/: Deloitte_Interview_Pitch.md  README.md  START_HERE.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/By_Company/Deloitte/Architecture/: ARCHITECTURE_BASICS.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/By_Company/Deloitte/Patterns/: COMPLETE_STUDY_GUIDE.md  PATTERNS_REFERENCE.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/By_Company/_BACKUP_20251203_164541/: README.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/By_Company/_BACKUP_20251203_164541/00_START_HERE/: MASTER_GUIDE.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/By_Company/_BACKUP_20251203_164541/01_Concepts/: ARCHITECTURE_BASICS.md  COMPLETE_PATTERNS_REFERENCE.md  C_SHARP_QUICK_REFERENCE.md  DELOITTE_ROUND1_FOCUS.md  JS_TS_QUICK_REFERENCE.md  README.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/By_Language/CSharp_DotNet/: README.md  architecture_design_patterns.md  assessment_notes.md  concept_drills.md  platform_tips.md  practice_scenarios.md  quick_reference.md  study_schedule.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/By_Language/React/: README.md  ai_interview_tips.md  assessment_notes.md  behavioral_questions.md  practice_scenarios.md  quick_reference.md  study_schedule.md  technical_guide.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/00_Deloitte_High_Frequency/: DELOITTE_VERIFIED_PROBLEMS.md
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Array_Sorting/Longest_Consecutive_Sequence/: README.md  longest_consecutive_sequence.cs  longest_consecutive_sequence.js  longest_consecutive_sequence.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Array_Sorting/Majority_Element/: README.md  majority_element.cs  majority_element.js  majority_element.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Array_Sorting/Median_Two_Sorted_Arrays/: README.md  median_of_two_sorted_arrays.cs  median_of_two_sorted_arrays.js  median_of_two_sorted_arrays.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Array_Sorting/Merge_Intervals/: README.md  merge_intervals.cs  merge_intervals.js  merge_intervals.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Binary_Search/Search_Insert_Position/: README.md  search_insert_position.cs  search_insert_position.js  search_insert_position.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Binary_Search/Sqrt_X/: README.md  sqrt_x.cs  sqrt_x.js  sqrt_x.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Bit_Manipulation/Counting_Bits/: README.md  counting_bits.cs  counting_bits.js  counting_bits.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Divide_And_Conquer/Merge_K_Sorted_Lists/: README.md  merge_k_sorted_lists.cs  merge_k_sorted_lists.js  merge_k_sorted_lists.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Dynamic_Programming/Climbing_Stairs/: README.md  climbing_stairs.cs  climbing_stairs.js  climbing_stairs.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Dynamic_Programming/Coin_Change/: README.md  coin_change.cs  coin_change.js  coin_change.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Dynamic_Programming/Edit_Distance/: README.md  edit_distance.cs  edit_distance.js  edit_distance.ts
hushh-adk-agents/._kushal_profile_data/Interview-Prep/Problems_By_Pattern/Dynamic_Programming/Maximum_Subarray/: README.md  maximum_subarray.cs  maximum_subarray.js  maximum_subarray.ts
hushh-adk-agents/._kushal_profile_data/data/: achievements.yaml  education.yaml  experience.yaml  profile.yaml  projects.yaml  skills.yaml
hushh-adk-agents/._kushal_profile_data/docs/: ATS_BEST_PRACTICES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  STAR_FORMAT_GUIDE.md  USAGE_GUIDE.md
hushh-adk-agents/._kushal_profile_data/reference/: CONSISTENCY_VERIFICATION.md  Cover_Letter.md  application_faq_answers.md  my_summary.md  phone_call_talking_points.md  project_matrix.md
hushh-adk-agents/._kushal_profile_data/responses/: application_reply.html  application_reply.md
hushh-adk-agents/._mcp_kai/: server.py
hushh-adk-agents/._scripts/: smart_import.py
hushh-adk-agents/.deploy/: README.md  start.sh
hushh-adk-agents/consent_api/: __init__.py  server.py
hushh-adk-agents/deploy/: README.md
hushh-adk-agents/kai_agent/: __init__.py
hushh-adk-agents/kai_agent/.adk/: session.db
hushh-adk-agents/kushal_agent/: __init__.py
hushh-adk-agents/kushal_agent/.adk/: session.db
hushh-adk-agents/nav_agent/: __init__.py
hushh-adk-agents/tech_fusion_agent/: __init__.py
(+1598 files in other folders)
